New output and some changed stuff